# stm32_freertos_projects

./: .gitmodules  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt
src/apps/blinky/: app_config.cmake  app_config.h  main.c
src/cmake/: freertos.cmake  libopencm3.cmake  project.cmake  toolchain.cmake
src/link_scripts/: STM32L433RCT6.ld
